--- a/ProseTerrain/app/src/main/res/values/strings.xml
+++ b/ProseTerrain/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Tactical Terrain</string>
+    <string name="app_name">Terrain</string>
 
     <!-- Common -->
     <string name="confirm">Confirmer</string>
