--- a/ProseCommandement/app/src/main/res/values/strings.xml
+++ b/ProseCommandement/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="config_title">Configuration de la Mission</string>
     <string name="team_name">Nom de l\'équipe</string>
     <string name="team_id">ID de l\'équipe</string>
-    <string name="target_info">Info de la cible</string>
+    <string name="target_info">Information de la cible</string>
     <string name="validate_mission">Valider la mission</string>
     <string name="fields_required">Tous les champs sont obligatoires</string>
 
@@ -65,4 +65,6 @@
     <string name="ally_identified">ALLIÉ IDENTIFIÉ !</string>
     <string name="name_label">Nom:</string>
     <string name="id_label">ID:</string>
+
+    <string name="target_feature">Manteau noir</string>
 </resources>
